5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1671_1879.log
== TEST (2019-04-28 21:47:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e ", f, "de falta")
-- OUTPUT:
420.0 extras e  20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:57:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e", f, "de falta")

h = e - ((1/4) * f)
if (h >= 400)
	l = 500
else:
	l =100
print("R$"round(l ,2))
-- ERROR:
File "XXXX", line 8
    if (h >= 400)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:58:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e", f, "de falta")

h = e - ((1/4) * f)
if (h >= 400):
	l = 500
else:
	l =100
print("R$"round(l ,2))
-- ERROR:
File "XXXX", line 12
    print("R$"round(l ,2))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:59:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e", f, "de falta")

h = e - ((1/4) * f)
if (h >= 400):
	l = 500
else:
	l =100
print("R$",round(l ,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:59:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e", f, "de falta")

h = e - ((1/4) * f)
if (h >= 400):
	l = 500
else:
	l =100
print("R$",round(l ,2))
-- EXECUTION TIME:
0.202233
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:59:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e", f, "de falta")

h = e - ((1/4) * f)
if (h >= 400):
	l = 500
else:
	l =100
print("R$",round(l ,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:59:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e, "extras e", f, "de falta")

h = e - ((1/4) * f)
if (h >= 400):
	l = 500
else:
	l =100
print("R$",round(l ,2))
-- EXECUTION TIME:
0.16834
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:00:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e,"extras e", f,"de falta")

h = e - ((1/4) * f)
if (h >= 400):
	l = 500
else:
	l =100
print("R$",round(l ,2))
-- EXECUTION TIME:
0.201569
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:00:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("horas extras: "))
f = float(input("horas de falta: "))

print(e,"extras e", f,"de falta")

h = e - ((1/4) * f)
if (h > 400.00):
	l = 500.00
else:
	l =100.00
print("R$",round(l ,2))
-- EXECUTION TIME:
0.187051
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
